dscpln-parsebalx/dscpln-parsebalx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dscpln-parsebalx
  namespace: production
  labels:
    app: dscpln-parsebalx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dscpln-parsebalx
  template:
    metadata:
      labels:
        app: dscpln-parsebalx
    spec:
      securityContext:
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: dscpln
          image: imranrdev/dscpln:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3300
          volumeMounts:
            - name: main
              mountPath: /Transactions
              subPath: Notes/Transactions
        - name: parsebalx
          image: imranrdev/parsebalx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: main
              mountPath: /Balance
              subPath: Documents/Balance
      volumes:
        - name: main
          persistentVolumeClaim:
            claimName: main-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dscpln-parsebalx
  namespace: production
  labels:
    app: dscpln-parsebalx
spec:
  selector:
    app: dscpln-parsebalx
  ports:
    - name: dscpln
      protocol: TCP
      port: 3300
      targetPort: 3300
    - name: parsebalx
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
